[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Images/spaceshooter/PNG/ufoRed.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Resources/Images/shield1.png" type="Texture" id=3]
[ext_resource path="res://Resources/Images/gameicons/PNG/White/1x/forward.png" type="Texture" id=4]
[ext_resource path="res://Resources/SFX/laserRetro_002.ogg" type="AudioStream" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CircleShape2D" id=2]
radius = 39.376

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
max_vel_x = Vector2( -350, 350 )
max_vel_y = Vector2( -350, 350 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/spaceship rotating" = SubResource( 3 )

[node name="direction" type="Node2D" parent="."]

[node name="Sprite2" type="Sprite" parent="direction"]
modulate = Color( 5, 5, 0, 0.7 )
material = SubResource( 4 )
position = Vector2( 15, -0.236084 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="direction"]
modulate = Color( 5, 5, 0, 1 )
material = SubResource( 5 )
position = Vector2( 73, -0.236 )
texture = ExtResource( 4 )

[node name="Position2D" type="Position2D" parent="direction"]
position = Vector2( 80, 0 )

[node name="invulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0

[node name="shoot_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="invulnerabilityTimer" to="." method="_on_invulnerabilityTimer_timeout"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
